# mata-comparison

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build_all.sh  generate_figs.py  install_requirements.sh  run_all.sh  run_smoke_test.sh  run_subset.sh  run_test.sh  setup.sh
tools/awali/: CMakeLists.txt  INSTALL.md  README.md  download.sh  install-awali.sh
tools/awali/CMakeScripts/: README.txt  compile_python.cmake  remove_data.cmake  setup.py.in
tools/awali/awali/: CMakeLists.txt  doxygen_mainpage.md  dyn.hh  groupdoc.hh  namespacesdoc.hh
tools/awali/awali/automata/: a1.json  ab.json  astar-bstar.json  b1.json  binary-int.json  binary.json  c1.json  d1.json  e1.json  evena.json  fibotdc-lr.json  flipper.json  gray.json  heapmodel.json  lamplighter.json  minab.json  minblocka.json  oddb.json  prob-rabin.json  rotation.json  slowcerny.json  slowgrow.json  url-validator.json
tools/awali/awali/automata/fibonacci/: additioner.json  normalizer.json  valuer.json
tools/awali/awali/automata/private/: a1-by-fibo.json  a1-eps.json  a1_determinization.json  empty-b.json  gray-pluseps.json  lamplighter-eps.json  mpty-b.json  schizo-z.json
tools/awali/awali/common/: CMakeLists.txt  README.md  ato.cc  ato.hh  demangle.hxx  enum_utils.cc  enum_utils.hh  enums.hh  is_iterable.hxx  json.cc  json_ast.cc  json_ast.hh  linked_map.hxx  no_such_file_exception.hh  parse_exception.cc  parse_exception.hh  priority.hh  qfraction.cc  qfraction.hh  to_value_of.hxx  tuple.hh  types.hh  version.hh
tools/awali/awali/common/docstring/: doc_entries.hh  entry.hh  eps_removal.hh  exp_to_aut.hh  json_format.hh  ratexp.hh  reduction.hh  reduction.md  template-docfile.hh
tools/awali/awali/common/json/: equality.cc  equality.hh  node.cc  node.hh  parser.cc  parser.hh  smart_printer.cc  smart_printer.hh  utils.hh  visitor.cc  visitor.hh
tools/awali/awali/common/tests/: CMakeLists.txt  test-enumerate_enums.cc  test-is_iterable.cc  test-json_parser.cc  test-linked_hashmap.cc  test-priority.cc  test-property_set.cc  test-version.cc
tools/awali/awali/dyn/: CMakeLists.txt  awalidyn.cc  config.hh.in
tools/awali/awali/dyn/algos/: aliases.cc  aliases.hh  random.cc  random.hh  sys.cc  sys.hh  tdc_circulation.cc  tdc_circulation.hh  tdc_eval.cc  tdc_eval.hh
tools/awali/awali/dyn/bridge_sttc/: accessible.cc  are_equivalent.cc  automaton.cc  basic.cc  compose.cc  context.cc  derivation.cc  determinize.cc  eliminate.cc  eval.cc  explicit_automaton.cc  explicit_context.cc  explicit_ratexp.cc  factor.cc  factories.cc  graph.cc  join.cc  minimize.cc  output.cc  partial_id.cc  product.cc  promotion.cc  proper.cc  quotient.cc  ratexp.cc  singleproduct.cc  standard.cc  transducer.cc  transpose.cc  words.cc
tools/awali/awali/dyn/core/: abstract_automaton.hh  abstract_context.cc  abstract_context.hh  abstract_ratexp.hh  any.cc  any.hh  automaton.cc  automaton.hh  context.cc  context.hh  context_description.cc  context_description.hh  context_description_deprecated.cc  context_description_deprecated.hh  ratexp.cc  ratexp.hh  transducer.cc  transducer.hh  typedefs.hh
tools/awali/awali/dyn/examples/: CMakeLists.txt  Makefile  io-file.cc  io-stream.cc  make-url-validator.cc
tools/awali/awali/dyn/loading/: compile.cc  compile.hh  handler.cc  handler.hh  handler_decl.hxx  locations.cc  locations.hh  parse_ctx.cc  parse_ctx.hh
tools/awali/awali/dyn/modules/: accessible.cc  accessible.hh  are_equivalent.cc  are_equivalent.hh  automaton.cc  eval.cc  (+42 more)
tools/awali/awali/extras/: CMakeLists.txt  module-compiler.cc
tools/awali/awali/ratexps/: conway-exp.json  div3b2-exp.json
tools/awali/awali/sttc/: automaton.hh  config.hh  empty.hh  json.hxx
tools/awali/awali/utils/: arith.hh  hash.hh  heap.hh
tools/awali/awalidoc/: CMakeLists.txt  fsm_json_v1.json
tools/awali/awalidoc/Doxygen/: CMakeLists.txt  Doxyfile.in  escape-md.cc
tools/awali/awalidoc/GettingStarted/: CMakeLists.txt
tools/awali/awalidoc/misc/: CMakeLists.txt  awali.bib.in  awali.tex
tools/awali/awalipy/: awalipy_purepython_extra.py  setup.py
tools/awali/awalipy/bridge-to-dyn/: algos.hh  automaton.hh  basic_automaton.hh  callback_ostream.hh  ratexp.hh  transducer.hh  utils.hh  weightset.hh
tools/awali/awalipy/cython-src/: automaton.h  automaton_1_include.pyx  automaton_2_class.pyx  automaton_3_function.pyx  awalipy.pyx  basic_automaton_1_include.pyx  basic_automaton_2_class.pyx  basic_automaton_3_function.pyx  common.pyx  fused_Automaton_or_Transducer.pyx  printing_callback_setup.pyx  ratexp_1_include.pyx  ratexp_2_class.pyx  ratexp_3_function.pyx  transducer_1_include.pyx  transducer_2_class.pyx  transducer_3_function.pyx  weightset_1_include.pyx  weightset_2_class.pyx
tools/awali/awalipy/doc/: cpp_to_python.txt
tools/awali/awalipy/examples/: determinize.py
tools/awali/awalipy/tests/: a1_det.json  automaton-algo-access.py  automaton-binary-op.py  automaton-determinize.py  automaton-edition.py  examples.py  importer.py  ratexp-minimal-automaton.py  ratexp-navigation.py  semiring.py  state-names.py  transducer-edition.py
tools/awali/cora/: CMakeLists.txt  autocompletion-cora.bash  autocompletion-cora.zsh  autocompletion.cc  color.hh  cora.cc  cora.hh  cora_lists.hh  cora_options.hh  print_out.cc
tools/awali/cora/CMakeScripts/: install_zsh_comp.cmake
tools/awali/cora/edit/: area.cc  area.hh  bless.cc  bless.hh  editter.cc  editter.hh  enums.hh  input.cc  input.hh  messages.hh  notifiable.hh  queued_ostream.cc  queued_ostream.hh  sentence.cc  sentence.hh  tip.cc  tip.hh  token.cc  token.hh  transition_pack.cc  transition_pack.hh  validator.cc  validator.hh
tools/awali/cora/extras/: CMakeLists.txt  cora-tester.cc
tools/awali/cora/online_doc/: basic.hh  cora_help.hh  factories.hh  generic.hh  nfa.hh  online_doc.hh  options.hh  ratexp.hh  shared.hh  transducer.hh  wfa.hh
tools/awali/cora/print_out/: color.hh  help.cc  list.cc  name_desc_list_processing.cc  print_cmd_table.cc  print_doc.cc  print_info.cc  print_out.cc  print_utils.cc
tools/awali/cora/tests/: CMakeLists.txt  a1_det.json  a1_nohist.json  seq-160117.txt  test-list.txt
(+376 files in other folders)
